# stablehlo

./: .bazelignore  .bazelrc  .bazelrc.swp  .cspell.json  .gitignore  .markdownlint.yaml  BUILD  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  \  a.out  a.sh  bazel-bin  bazel-out  bazel-stablehlo  bazel-testlogs  pretty.mlir  q  t1.mlir  t2.mlir  t2.patch  t3.mlir  t4.mlir  test.cpp  x  x.c
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: buildAndTest.yml  buildAndTestBazel.yml  buildAndTestCMake.yml  buildBazel.yml  build_bazel.yml  execute_tutorials.yml  lint.yml  lint_docs.yml  lint_fallback.yml  lint_markdown.yml  markdown_lint.yml  publishWheelRelease.yml  test_tutorials.yml
build_tools/: README.md  build_mlir.sh  llvm_version.txt  mlir.patch  update_version_h.sh  utils.bzl
build_tools/bazel/: glob_lit_test.bzl
build_tools/github_actions/: ci_build_bazel.sh  ci_build_cmake.sh  ci_build_cmake_code_coverage.sh  ci_build_cmake_llvm.sh  ci_build_cmake_python_api.sh  ci_build_docs.sh  ci_build_free_disk_space.sh  ci_build_llvm.sh  ci_build_llvm_with_stablehlo.sh  ci_build_stablehlo.sh  ci_build_stablehlo_api.sh  ci_build_stablehlo_python_api.sh  lint_buildifier.sh  lint_check_license.sh  lint_clang_format.sh  lint_llvm_commit.sh  lint_markdown.sh  lint_shellcheck.sh  lint_spelling.sh  lint_version.sh  lint_whitespace_checks.sh  markdownlint.yaml
build_tools/integrate/: README.md  llvm_bump_revision.sh  stablehlo_tag_and_bump_version.sh
build_tools/math/: README.md  generate_ChloDecompositionPatternsMath.py  generate_tests.py  mlir_to_filecheck.py
cmake/: SetupSanitizers.cmake
cmake/modules/: CMakeLists.txt  StablehloConfig.cmake.in
dialect/: Base.cpp  Base.h  Base.td  CMakeLists.txt  ChloEnums.td  ChloOps.cpp  ChloOps.h  ChloOps.td  Ops.cpp  Ops.h  Ops.td  StablehloAttrs.td  StablehloEnums.td  StablehloOps.cpp  StablehloOps.h  StablehloOps.td
docs/: _toc.yaml  awesome.md  awesome_openxla.md  bytecode.md  compatibility.md  dynamism.md  ide.md  implementation_progress.md  interpreter.md  interpreter.md.bak  interpreter_checklist.md  interpreter_design_doc.md  interpreter_status.md  markdownlint.yaml  quantization.md  reference.md  reference_checklist.md  roadmap.md  spec.md  spec.md.bak  spec_checklist.md  spec_draft.md  spec_draft.md.bak  status.md  type_inference.md  vhlo.md  vhlo_checklist.md
docs/tutorials/: jax-export.ipynb  pytorch-export.ipynb  requirements.txt  savedmodel-embed.ipynb
examples/: CMakeLists.txt
examples/c++/: BUILD.bazel  CMakeLists.txt  ExampleAdd.cpp  README.md
examples/python/: CMakeLists.txt  stablehlo_add.py
integrations/c/: StablehloAttributes.cpp
integrations/python/: CMakeLists.txt
logs/: almost_eq_fail.txt  bad_access.txt  element_not_integer.txt  unsupported_ops.txt  unsupported_ops_count.txt
reference/: BUILD  CMakeLists.txt  Element.cpp  Element.h  Interpreter.cpp  Interpreter.h  Ops.cpp  Ops.h  Tensor.cpp  Tensor.h
reference/tests/: AddOpTest.cpp  BUILD  CMakeLists.txt  RunTestUtils.cpp  RunTestUtils.h  TestUtils.cpp
rfcs/: 20220912-compatibility.md  20220925-bounded-dynamism.md  20220926-evolution.md  20221031-fp8.md  20230210-sparsity.md  20230210-stablehlo-tosa.md  20230321-fp8_fnuz.md  20230321-windowreversal.md  20230517-forward-compatibility-testing.md  20230527-dynamism-101.md  20230528-linalg.md  20230606-topk.md  20230609-extensibility.md  20230622-quantized-reduction.md  20230622-quantized-reduction.md.bak  20230623-compatibility.md  20230704-dynamism-101.md  20231005-hybrid-quantization.md  20231017-collective-broadcast.md  20240311-gather-scatter-batching-dims.md  20240312-standardize-collective-ops.md  20240312-standardize-customcallop.md  20240312-standardize-tan-customcall-tuplecollective-ops.md  20240312-standardize-tuplecollective-ops.md  20240312-tanop.md  20240315-algorithm-support.md  20240503-opset-deprecations.md  20240620-int2.md  20240720-int2.md  20240917-async-support.md  20241015-result-accuracy.md  20250421-source-target-pairs.md  20250729-buffer.md  20260209-async-collectives.md  20260223-mesh-axes-replica-groups.md  20260223-replica-groups-v3.md  20260720-repo-sot-migration.md  bounded_dynamism.md
rfcs/images/: 20230309-compatibility.md
stablehlo/: BUILD  CMakeLists.txt  TODO.txt
stablehlo/api/: CMakeLists.txt  PortableApi.cpp  PortableApi.h
stablehlo/compatibility/: CMakeLists.txt  DialectCompatibility.cpp  DialectCompatibility.h  DialectCompatibilityBase.cpp  DialectCompatibilityBase.h  DialectCompatibilityInterface.cpp  TODO.txt  (+7 more)
stablehlo/conversions/tosa/: BUILD.bazel  CMakeLists.txt  README.md  stablehlo_tosa_opt.cc
stablehlo/conversions/tosa/tests/: BUILD.bazel  CMakeLists.txt  binary.mlir  legalize_tosa_rescale_to_stablehlo.mlir  lit.cfg.py  nullary.mlir  quant.mlir  quantToStablehlo.mlir  rescale.mlir  rescale_interpreter.mlir  ternary.mlir  unary.mlir
stablehlo/conversions/tosa/transforms/: BUILD.bazel  CMakeLists.txt  LegalizeStablehlo.cpp  Passes.h  Passes.td  PrepareStablehlo.cpp  StablehloLegalizeToTosa.cpp  StablehloLegalizeToTosa.pdll  StablehloQuantLegalizeToTosaRescale.cpp  TosaRescaleLegalizeToStablehlo.cpp  legalize_stablehlo.cc  passes.h  prepare_stablehlo.cc
stablehlo/integrations/cpp/builder/: AttrTypeBuilderUtil.cpp  AttrTypeBuilderUtil.h  AttrTypeBuilderUtilTest.cpp  CMakeLists.txt  ChloBuilderTest.cpp  MlirBuilder.h  MlirBuilderTblgen.cmake  MlirBuilderTblgen.cpp  MlirBuilderTest.cpp  README.md  StablehloBuilder.cpp  StablehloBuilder.h  StablehloBuilderTest.cpp
stablehlo/reference/tests/: AddOpTest.cpp  CMakeLists.txt  StablehloInterpreterRunner.cpp  TestUtils.cpp  TestUtils.h  add.mlir  lit.cfg.py  lit.site.cfg.py.in
tests/: CMakeLists.txt  TestUtils.cpp  infer_stablehlo.mlir  ops.mlir  ops_sparse.mlir  ops_stablehlo.mlir  ops_stablehlo_prettyprint.mlir  print_reduce.mlir  print_stablehlo.mlir  print_while.mlir  verify_conv.mlir  verify_reduce.mlir
tools/: CMakeLists.txt  stablehlo-opt-main.cc
(+6639 files in other folders)
