###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "toolchains_llvm", version = "0.10.3")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_python", version = "0.30.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# There is a problem at the moment running lit using Python 3.11
# Our CI system enforces Python 3.10 to get around it but we should set the toolchain
# in Bazel itself to avoid this problem.
# https://github.com/llvm/llvm-project/issues/75963
python.toolchain(
    is_default = True,
    python_version = "3.10",
)

# Steps from https://github.com/bazel-contrib/toolchains_llvm/releases/tag/0.10.3
# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "11.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
