load("@bazel_skylib//rules:build_test.bzl", "build_test")

# StableHLO -> TOSA bridge.
package(
    default_visibility = [":internal"],
    licenses = ["notice"],
)

package_group(
    name = "internal",
    packages = [],
)

build_test(
    name = "stablehlo-tosa-opt_build_test",
    targets = [
        "stablehlo-tosa-opt",
    ],
)

cc_binary(
    name = "stablehlo-tosa-opt",
    srcs = ["stablehlo_tosa_opt.cc"],
    deps = [
        "//:register",
        "//stablehlo/conversions/tosa/transforms:StablehloTOSATransforms",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TosaDialect",
    ],
)
