# Legalizations and transforms for StableHLO -> TOSA.
load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

package_group(
    name = "internal",
    packages = [],
)

gentbl_cc_library(
    name = "StablehloTOSAPDLLPatternsIncGen",
    tbl_outs = [
        (
            ["-x=cpp"],
            "legalize_stablehlo.pdll.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-pdll",
    td_file = "legalize_stablehlo.pdll",
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:TosaDialectTdFiles",
        "//:stablehlo_ops_td_files",
    ],
)

gentbl_cc_library(
    name = "StablehloTOSATransformsPassIncGen",
    strip_include_prefix = ".",
    tbl_outs = [
        (
            [
                "-gen-pass-decls",
                "-name=StablehloTOSATransforms",
            ],
            "passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "passes.td",
    deps = [
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

cc_library(
    name = "StablehloTOSATransforms",
    srcs = [
        "legalize_stablehlo.cc",
        "prepare_stablehlo.cc",
    ],
    hdrs = [
        "passes.h",
    ],
    includes = ["."],
    deps = [
        "//:stablehlo_ops",
        ":StablehloTOSAPDLLPatternsIncGen",
        ":StablehloTOSATransformsPassIncGen",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Parser",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:QuantOps",
        "@llvm-project//mlir:TosaDialect",
        "@llvm-project//mlir:Transforms",
    ],
)
